--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,5 @@
-p{
-    margin: 0;
+body{
+    margin: 0.5vh;
 }
 
 main{
@@ -13,19 +13,38 @@ section{
 
 section:nth-child(1){
     grid-template-columns: auto 25%;
-    grid-template-rows: 25vh;
+    grid-template-rows: 24.25vh;
 }
 
 section:nth-child(2){
     grid-template-columns: 100%;
-    grid-template-rows: 50vh;
+    grid-template-rows: 49.5vh;
 }
 
 section:nth-child(3){
     grid-template-columns: 25% auto;
-    grid-template-rows: 25vh;
+    grid-template-rows: 24.25vh;
+}
+
+p{
+    margin: 0;
 }
 
 img{
     max-width: 100%;
+}
+
+.speech{
+    border: 1px solid black;
+    border-radius: 42px;
+    text-align: center;
+    padding: 0.5rem;
+}
+
+#speech1{
+    margin-right: 1rem;
+}
+
+#speech2{
+    margin-left: 1rem;
 }
