--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,7 +26,6 @@ section:nth-child(2){
 
 section:nth-child(3){
     grid-template-columns: 25% auto;
-    align-items: end;
     background-color: wheat;
 }
 
@@ -38,17 +37,30 @@ img{
     max-width: 100%;
 }
 
-.speech{
-    border: 1px solid black;
-    border-radius: 42px;
-    text-align: center;
-    padding: 0.5rem;
-}
-
 #speech1{
     margin-right: 1rem;
 }
 
 #speech2{
     margin-left: 1rem;
+}
+
+.speech{
+    border: 1px solid black;
+    border-radius: 42px;
+    padding: 0.5rem;
+    text-align: center;
+    background-color: white;
+}
+
+.grid-span{
+    grid-column-end: span 2;
+}
+
+.center{
+    text-align: center;
+}
+
+.right{
+    text-align: right;
 }
