render module works

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -30,203 +30,7 @@ section:nth-child(2){
     background-color: grey;
     padding: 0;
     justify-items: center;
-}
-
-/* Vasilis place on the screen */
-section:nth-child(3){
-    grid-template-columns: 25% auto;
-    background-color: wheat;
-    justify-items: start;
-}
-
-/* Jenny's speech and her bubbel */
-#speech1, #thinking1{
-    grid-column-start: 1;
-}
-
-/* Jenny's portrait */
-section:nth-child(1)>article:nth-child(3){
-    text-align: center;
-    grid-column-start: 2;
-}
-
-/* Vasilis's portrait */
-section:nth-child(3)>article:nth-child(1){
-    text-align: center;
-    grid-column-start: 1;
-}
-
-/* Vasilis's speech and her bubbel */
-#speech2, #thinking2{
-    grid-column-start: 2;
-}
-
-p{
-    margin: 0;
-}
-
-img{
-    max-width: 100%;
-}
-
-#speech1>p{
-    margin-right: 1rem;
-}
-
-#speech2>p{
-    margin-left: 1rem;
-}
-
-.speech{
-    border: 1px solid black;
-    border-radius: 42px;
-    padding: 0.5rem;
-    text-align: center;
-    background-color: white;
-}
-
-.saying>*{
-    grid-column-start: 1;
-    grid-row-start: 1;
-}
-
-#thinking1{
-    grid-column-start: 1;
-    align-self: end;
-    justify-self: end;
-}
-
-#thinking2{
-    grid-column-start: 2;
-    align-self: start;
-    justify-self: start;
-}
-
-.thinking>div{
-    position: relative;
-    border: 1px solid black;
-    border-radius: 42px;
-    background-color: white;
-}
-
-.thinking>div{
-    position: relative;
-    border: 1px solid black;
-    border-radius: 42px;
-    background-color: white;
-}
-
-#thinking1>div:nth-child(1){
-    width: 0.75rem;
-    height: 0.75rem;
-    bottom: 24px;
-    left: 24px;
-}
-
-#thinking1>div:nth-child(2){
-    width: 1rem;
-    height: 1rem;
-    left: 2px;
-    bottom: 16px;
-}
-
-#thinking1>div:nth-child(3){
-    width: 1.25rem;
-    height: 1.25rem;
-    right: 19px;
-    bottom: 6px;
-}
-
-#thinking2>div:nth-child(1){
-    width: 1.25rem;
-    height: 1.25rem;
-    bottom: 2px;
-}
-
-#thinking2>div:nth-child(2){
-    width: 1rem;
-    height: 1rem;
-    right: 10px;
-}
-
-#thinking2>div:nth-child(3){
-    width: 0.75rem;
-    height: 0.75rem;
-    right: 25px;
-}
-
-.saying{
-    display: grid;
-    justify-self: stretch;
-    align-self: stretch;
-}
-
-#speech1>div{
-    position: relative;
-    top: 34px;
-    left: 214px;
-    width: 0;
-    height: 0;
-    border-top: 7px solid transparent;
-    border-bottom: 19px solid transparent;
-    border-left: 55px solid white;
-}
-
-#speech2>div{
-    position: relative;
-    top: 59px;
-    right: 37px;
-    width: 0px;
-    height: 0;
-    border-top: 19px solid transparent;
-    border-bottom: 7px solid transparent;
-    border-right: 55px solid white;
-}
-
-.hidden{
-    opacity: 0;
-}
-
-@media only screen and (max-width: 459px) {
-    section:nth-child(1){
-        align-items: start;
-    }
-    
-    section:nth-child(3){
-        align-items: end;
-    }
-}body{
-    margin: 0;
-}
-
-main{
-    display: grid;
-    height: 100vh;
-    align-content: center;
-}
-
-section{
-    display: grid;
-    padding: 0.25rem;
-    align-items: center;
-}
-
-section>*{
-    grid-row-start: 1;
-}
-
-/* Jenny's place on the screen */
-section:nth-child(1){
-    grid-template-columns: auto 25%;
-    background-color: wheat;
-    justify-items: start;
-}
-
-/* Thought bubbel  */
-section:nth-child(2){
-    background-color: grey;
-    padding: 0;
-    justify-items: center;
+    min-height: 263px;
 }
 
 /* Vasilis place on the screen */
