--- a/static/css/style.css
+++ b/static/css/style.css
@@ -50,6 +50,7 @@ section:nth-child(3){
 section:nth-child(1)>article:nth-child(3){
     text-align: center;
     grid-column-start: 2;
+    justify-self: end;
 }
 
 /* Vasilis's portrait */
